# ModIA

./: README.md
5_ModIA/S2/Metamodelisation_2/: .gitignore  README.md  mkdocs.yml  pyproject.toml
5_ModIA/S2/Metamodelisation_2/docs/: gallery_conf.py  gen_ref_pages.py  index.md
5_ModIA/S2/Metamodelisation_2/docs/presentation/: dates.md  deliverables.md  use_case.md
5_ModIA/S2/Metamodelisation_2/docs/report/: part1.md  part2.md  part3.md
5_ModIA/S2/Metamodelisation_2/docs/scripts/examples/: plot_design_space.py  plot_doe.py  plot_draw_aicraft.py  plot_h2turbo_fan.py  plot_optimization.py  plot_sensitivity_analysis.py  plot_surrogate.py  plot_uncertain_space.py  plot_uncertainty_propagation.py  plot_unit_conversion.py
5_ModIA/S2/Metamodelisation_2/docs/utils/: installation.md  markdown.md
5_ModIA/S2/Metamodelisation_2/src/lh2pac/: turbofan_h2_function.py
5_ModIA/S2/Metamodelisation_2/src/lh2pac/example/aircraft/: arrangement_tree.py
5_ModIA/S2/Metamodelisation_2/src/lh2pac/example/aircraft/turbofan/: aircraft_binary_object.pkl  aircraft_explore_design.txt  aircraft_output_data.json  (+3 more)
5_ModIA/S2/Metamodelisation_2/src/lh2pac/gemseo/: discipline.py  utils.py
5_ModIA/S2/Metamodelisation_2/src/lh2pac/marilib/aircraft/: __init__.py  aircraft_root.py  environment.py  handling_quality.py  mission.py  model_config.py  model_config_small_plane.py  performance.py  requirement.py  step_mission.py
5_ModIA/S2/Metamodelisation_2/src/lh2pac/marilib/airship/: airship.py  airship_old.py
5_ModIA/S2/Metamodelisation_2/src/lh2pac/marilib/utils/: read_write.py
(+1841 files in other folders)
