[project]
name = "lh2pac"
authors = [
    {name = "Matthias De Lozzo", email = "matthias.delozzo@irt-saintexupery.com"}
]
description = "An academic project to design a liquid hydrogen powered aircraft."
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]
requires-python = ">=3.9, <3.12"
dependencies = [
    "gemseo[all] >= 5.3.0",
    "gemseo-mlearning >= 1.1.2",
    "griffe-inherited-docstrings",
    "mkdocs-gallery",
    "mkdocs-section-index",
    "mkdocs-literate-nav",
    "mkdocs-gen-files",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocs-bibtex",
    "tabulate",
    "black"
]

[project.urls]
Homepage = "https://gitlab.com/MatthiasDeLozzo/lh2pac"
Source = "https://gitlab.com/MatthiasDeLozzo/lh2pac"
Tracker = "https://gitlab.com/MatthiasDeLozzo/lh2pac/-/issues"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
